--- a/web_impl/index.html
+++ b/web_impl/index.html
@@ -90,39 +90,31 @@
               autocorrect="off"
               autocapitalize="off"
             >
-#set 0 9
-#set 1 5
+// initialize fib(0) and fib(1)
+#set 0x00 0x00
+#set 0x01 0x01
 
-li 0
-load r1 r0
-add  r1 r2
-mv   r2 r0
-li    2
-store r2 r0
+li 2
+mv r1 r0
 
+// fib procedure start
+// r1 -> the number in the sequence to calculate
+// r2 -> the result
+mv r3 r1
+dec r3
+load r2 r3
+dec r3
+load r0 r3
+add r0 r2
 
+// trampoline
 jmp 2
 jmp -7
 
+store r0 r1
+inc r1
 
-li 3
-load r3 r0
-inc r3
-store r3 r0
-
-li 1
-load r0 r0
-
-jmp 2
-jmp -8
-
-sub r0 r3
-mv r3 r0
-li 2
-jiz r0 r3
-
-jmp -5
-halt</textarea
+jmp -3</textarea
             >
           </div>
           <div
