--- a/web_impl/spec.html
+++ b/web_impl/spec.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style_1.css" />
   </head>
   <body>
     <h1>The Lynx 8-bit Machine Specification</h1>
@@ -81,7 +81,8 @@ When an immediate is used as the operand it takes up the entire four bit space o
 | jmp      | 1101   | Imm          | pc = imm                          |
 | jiz      | 1110   | Reg Reg      | if op2 = 0 then pc = pc + op1     |
 | jaiz     | 1111   | Reg Reg      | if op2 = 0 then pc = op1          |
-</pre>
+</pre
+    >
   </body>
 
   <footer
@@ -96,4 +97,3 @@ When an immediate is used as the operand it takes up the entire four bit space o
     >, 2025
   </footer>
 </html>
-
