--- a/web_impl/index.html
+++ b/web_impl/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style_1.css" />
   </head>
   <body>
     <h1>The Lynx 8-bit Machine</h1>
@@ -106,7 +106,7 @@
               autocorrect="off"
               autocapitalize="off"
             >
-          </textarea>
+            </textarea>
           </div>
           <div
             id="assembler-errors"
