Feature to copy instructions to clipboard

--- a/web/index.html
+++ b/web/index.html
@@ -118,6 +118,7 @@
       <div class="bottom-row">
         <div class="grid-container">
           <div class="grid-title">Instructions</div>
+          <button id="export-instructions-btn" class="export-btn" title="Export instructions as hexadecimal to clipboard">Export to Clipboard</button>
           <div id="instructions-grid" class="byte-grid"></div>
         </div>
         <div class="grid-container">
