link to repo in web content

--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,13 @@
     <nav style="margin-bottom: 1em; text-align: center">
       <a
         href="spec.html"
-        style="color: #2a7ab9; text-decoration: underline; font-size: 1.1em"
-        >View Spec</a
+        style="color: #2a7ab9; text-decoration: underline; font-size: 1.1em; margin: 0 1em;"
+        >Spec</a
+      >
+      <a
+        href="https://github.com/LytixDev/lynx-machine"
+        style="color: #2a7ab9; text-decoration: underline; font-size: 1.1em; margin: 0 1em;"
+        >Github</a
       >
     </nav>
 
